# internal/handler/deleteImage.handler.go
@@ -1,0 +1,29 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	generated "Rivus/internal/generated"
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// DeleteImage 删除图片
+func (h *Handler) DeleteImage(c *gin.Context) {
+	l := logic.NewDeleteImageLogic(h.Logic)
+
+	var req generated.DeleteImageRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	resp, err := l.DeleteImage(&req)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
