# internal/handler/deleteVideo.handler.go
@@ -1,0 +1,29 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	generated "Rivus/internal/generated"
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// DeleteVideo 删除视频
+func (h *Handler) DeleteVideo(c *gin.Context) {
+	l := logic.NewDeleteVideoLogic(h.Logic)
+
+	var req generated.DeleteVideoRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	resp, err := l.DeleteVideo(&req)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
