# internal/handler/getImageRecycleBin.handler.go
@@ -1,0 +1,24 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	generated "Rivus/internal/generated"
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// GetImageRecycleBin 获取回收站图片
+func (h *Handler) GetImageRecycleBin(c *gin.Context, params generated.GetImageRecycleBinParams) {
+	l := logic.NewGetImageRecycleBinLogic(h.Logic)
+
+	resp, err := l.GetImageRecycleBin(params)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
