# internal/handler/getVideoRecycleBin.handler.go
@@ -1,0 +1,24 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	generated "Rivus/internal/generated"
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// GetVideoRecycleBin 获取回收站视频
+func (h *Handler) GetVideoRecycleBin(c *gin.Context, params generated.GetVideoRecycleBinParams) {
+	l := logic.NewGetVideoRecycleBinLogic(h.Logic)
+
+	resp, err := l.GetVideoRecycleBin(params)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
