# internal/handler/restoreImage.handler.go
@@ -1,0 +1,29 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	generated "Rivus/internal/generated"
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// RestoreImage 恢复图片
+func (h *Handler) RestoreImage(c *gin.Context) {
+	l := logic.NewRestoreImageLogic(h.Logic)
+
+	var req generated.RestoreImageRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	resp, err := l.RestoreImage(&req)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
