# internal/handler/restoreVideo.handler.go
@@ -1,0 +1,29 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	generated "Rivus/internal/generated"
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// RestoreVideo 恢复视频
+func (h *Handler) RestoreVideo(c *gin.Context) {
+	l := logic.NewRestoreVideoLogic(h.Logic)
+
+	var req generated.RestoreVideoRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	resp, err := l.RestoreVideo(&req)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
